--- a/index.html
+++ b/index.html
@@ -4,25 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Mi Sitio Web</title>
-    <link rel="stylesheet" href="styles.css">
-        <img src="imagenes/logo.jpg.png" alt="Logo" class="logo">
-        <h1>Bienvenidos a Casa Cristal</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="galeria.html">Galería</a></li>
-                <li><a href="acerca.html">Acerca de</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="integrantes.html">integrantes</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h2>Explora nuestro Parque!</h2>
-        <p>Gracias por visitar el sitio web de nuestro increíble parque Casa Cristal en donde podrás encontrar información sobre nuestas instalaciones, atracciones, sobre nuestro restaurante, lo que ofrecemos y así mismo nuestros precios entre otras cosas más.</p>
-    </main>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+    <body>
+        <div class="banner">
+            <video autoplay loop muted plays-inline>
+                <source src="imágenes/video.mp4" type="video/mp4">
+            </video>
+            <div class="navbar">
+                <img src="imágenes/log.blanco.png" alt="Logo" class="logo">
+                <ul>
+                    <li><a href="índice.html">Inicio</a></li>
+                    <li><a href="galería.html">Galería</a></li>
+                    <li><a href="acerca.html">Acerca de</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                    <li><a href="integrantes.html">integrantes</a></li>
+                </ul>
+            </div>
+            <div class="content">
+                <h2>Explora nuestro Parque!</h2>
+                <div class="texto">
+                    <p>Gracias por visitar el sitio web de nuestro increíble parque Casa Cristal en donde podrás encontrar información sobre nuestas instalaciones, atracciones, sobre nuestro restaurante, lo que ofrecemos y así mismo nuestros precios entre otras cosas más.</p>
+                </div>
+            </div>
+        </div>
+    </body>
     <footer>
         <p>&copy; Casa Cristal.</p>
     </footer>
-</body>
 </html>
