--- a/contacto.html
+++ b/contacto.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Mi Sitio Web</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
-        <img src="imagenes/logo.jpg.png" alt="Logo" class="logo">
+        <img src="imágenes/logo.jpg.png" alt="Logo" class="logo">
         <h1>Contacto</h1>
         <nav>
             <ul>
